# rust-graphql-boilerplate

./: .env  Cargo.toml  README.md
sql/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: database.rs
src/graphql/: graphql_schema.rs  mod.rs  service.rs
src/graphql/models/team/: mod.rs  team_model.rs
src/graphql/models/user/: user_model.rs
src/graphql/mutation/user/: mod.rs  user_mutations.rs
src/graphql/queries/team/: mod.rs  team_queries.rs
src/graphql/queries/user/: user_queries.rs
