[package]
name = "rust-graphql-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
diesel = { version = "2.0.3", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
juniper = "0.15.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"